--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My Personal Site</title>
+    <title>Raja Sekhar Medindrao - Portfolio</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-        <h1>Hi, I'm Raj</h1>
+        <h1>Hi, I'm Raja Sekhar Medindrao</h1>
     </header>
     <section class="about">
         <h2>About Me</h2>
         <p>
-            This is a simple personal webpage hosted with GitHub Pages. It contains a little information about me and how to get in touch.
+            I am a software professional focused on building efficient web solutions. My work involves developing full‑stack applications and exploring new technologies to create impactful user experiences.
         </p>
     </section>
     <section class="contact">
         <h2>Contact</h2>
         <p>You can reach me using the following links:</p>
         <ul>
-            <li>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile">LinkedIn Profile</a></li>
+            <li>Email: <a href="mailto:rajsekhar731@gmail.com">rajsekhar731@gmail.com</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/raja-sekhar-medindrao-62730915a/">raja-sekhar-medindrao-62730915a</a></li>
             <li>Phone: <a href="tel:+11234567890">+1&nbsp;123&nbsp;456&nbsp;7890</a></li>
         </ul>
     </section>
