--- a/index.html
+++ b/index.html
@@ -3,30 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raja Sekhar Medindrao - Portfolio</title>
+    <title>Raja Sekhar Medindrao</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-        <h1>Hi, I'm Raja Sekhar Medindrao</h1>
-    </header>
-    <section class="about">
-        <h2>About Me</h2>
-        <p>
-            I am a software professional focused on building efficient web solutions. My work involves developing full‑stack applications and exploring new technologies to create impactful user experiences.
-        </p>
-    </section>
-    <section class="contact">
-        <h2>Contact</h2>
-        <p>You can reach me using the following links:</p>
+    <nav class="navbar">
         <ul>
-            <li>Email: <a href="mailto:rajsekhar731@gmail.com">rajsekhar731@gmail.com</a></li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/raja-sekhar-medindrao-62730915a/">raja-sekhar-medindrao-62730915a</a></li>
-            <li>Phone: <a href="tel:+11234567890">+1&nbsp;123&nbsp;456&nbsp;7890</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#resume">Resume</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
+    </nav>
+    <header class="hero">
+        <div class="profile">
+            <img src="profile.jpg" alt="Raja Sekhar Medindrao">
+            <h1>Raja Sekhar Medindrao</h1>
+            <p class="tagline">MBA Candidate | Strategy & Technology | Ex-Salesforce PM | Ex-F5 Engineer</p>
+        </div>
+        <div class="intro">
+            <h2>Hello</h2>
+            <p>I'm a Columbia MBA passionate about solving complex problems at the intersection of business and technology.</p>
+            <div class="buttons">
+                <a class="btn" href="mailto:rmedindrao26@gsb.columbia.edu">Email</a>
+                <a class="btn" href="https://www.linkedin.com/in/raja">LinkedIn</a>
+            </div>
+        </div>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I'm a Columbia MBA passionate about solving complex problems at the intersection of business and technology.</p>
     </section>
-    <footer>
-        <p>&copy; 2024 Raj</p>
+
+    <footer id="contact">
+        <p>Phone: <a href="tel:+16463710723">+1 (646) 371‑0723</a></p>
+        <p>Email: <a href="mailto:rmedindrao26@gsb.columbia.edu">rmedindrao26@gsb.columbia.edu</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/raja">raja</a></p>
     </footer>
 </body>
 </html>
