Simplify page with single card layout

--- a/index.html
+++ b/index.html
@@ -7,39 +7,26 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#resume">Resume</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-    <header class="hero">
-        <div class="profile">
-            <img src="profile.jpg" alt="Raja Sekhar Medindrao">
-            <h1>Raja Sekhar Medindrao</h1>
-            <p class="tagline">MBA Candidate | Strategy & Technology | Ex-Salesforce PM | Ex-F5 Engineer</p>
-        </div>
-        <div class="intro">
+    <main class="container">
+        <section class="card">
+            <div class="profile">
+                <img src="profile.jpg" alt="Profile picture placeholder">
+                <h1>Raja Sekhar Medindrao</h1>
+                <p class="tagline">MBA Candidate | Strategy & Technology | Ex-Salesforce PM | Ex-F5 Engineer</p>
+            </div>
+        </section>
+        <section class="content">
             <h2>Hello</h2>
             <p>I'm a Columbia MBA passionate about solving complex problems at the intersection of business and technology.</p>
             <div class="buttons">
                 <a class="btn" href="mailto:rmedindrao26@gsb.columbia.edu">Email</a>
                 <a class="btn" href="https://www.linkedin.com/in/raja">LinkedIn</a>
             </div>
-        </div>
-    </header>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I'm a Columbia MBA passionate about solving complex problems at the intersection of business and technology.</p>
-    </section>
-
-    <footer id="contact">
-        <p>Phone: <a href="tel:+16463710723">+1 (646) 371‑0723</a></p>
-        <p>Email: <a href="mailto:rmedindrao26@gsb.columbia.edu">rmedindrao26@gsb.columbia.edu</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/raja">raja</a></p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Raja Sekhar Medindrao. All rights reserved.</p>
+        <p>Licensed under MIT License.</p>
     </footer>
 </body>
 </html>
