Update contact links to icons

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <section class="content">
             <h2>Hello</h2>
             <p>I'm a Columbia MBA passionate about solving complex problems at the intersection of business and technology.</p>
-            <div class="buttons">
-                <a class="btn" href="mailto:rmedindrao26@gsb.columbia.edu">Email</a>
-                <a class="btn" href="https://www.linkedin.com/in/raja">LinkedIn</a>
+            <div class="icon-links">
+                <a class="icon" href="mailto:rajsekhar731@gmail.com" aria-label="Email">📧</a>
+                <a class="icon" href="https://www.linkedin.com/in/raja-sekhar-medindrao-62730915a/" aria-label="LinkedIn">🔗</a>
             </div>
         </section>
     </main>
