--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
     </main>
     <footer>
         <p>&copy; 2025 Raja Sekhar Medindrao. All rights reserved.</p>
-        <p>Licensed under MIT License.</p>
+        <p>Licensed under Apache 2.0.</p>
+        <p>Developed by Codex + ChatGPT.</p>
     </footer>
 </body>
 </html>
