Update personal description in index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </section>
         <section class="content">
             <h2>Hello</h2>
-            <p>I'm a Columbia MBA passionate about solving complex problems at the intersection of business and technology.</p>
+            <p>I’m a Columbia Business School MBA student passionate about solving complex problems at the intersection of business and technology</p>
             <div class="icon-links">
                 <a class="icon" href="mailto:rajsekhar731@gmail.com" aria-label="Email">
                     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
