--- a/index.html
+++ b/index.html
@@ -14,6 +14,87 @@
             color: #111;
             line-height: 1.6;
         }
+        header.top-nav {
+            position: sticky;
+            top: 0;
+            z-index: 10;
+            background: rgba(247, 249, 252, 0.9);
+            backdrop-filter: blur(6px);
+            border-bottom: 1px solid rgba(34, 91, 180, 0.08);
+        }
+        .top-nav-inner {
+            max-width: 1100px;
+            margin: 0 auto;
+            padding: 1rem 2rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 1.5rem;
+        }
+        .brand {
+            font-weight: 600;
+            font-size: 1.05rem;
+            color: #224c8e;
+            letter-spacing: 0.02em;
+        }
+        .nav-links {
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+        }
+        .nav-pill {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0.45rem 0.95rem;
+            border-radius: 999px;
+            background: #ffffff;
+            color: #224c8e;
+            text-decoration: none;
+            font-size: 0.9rem;
+            font-weight: 500;
+            box-shadow: 0 4px 12px rgba(34, 76, 142, 0.08);
+            transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.2s ease;
+        }
+        .nav-pill:hover,
+        .nav-pill:focus-visible {
+            background: #e8f1ff;
+            box-shadow: 0 6px 16px rgba(34, 76, 142, 0.15);
+            transform: translateY(-1px);
+        }
+        .nav-toggle {
+            display: none;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 42px;
+            height: 42px;
+            border: none;
+            border-radius: 50%;
+            background: #ffffff;
+            box-shadow: 0 4px 12px rgba(34, 76, 142, 0.12);
+            cursor: pointer;
+            padding: 0.5rem;
+        }
+        .nav-toggle span {
+            width: 20px;
+            height: 2px;
+            background: #224c8e;
+            border-radius: 4px;
+            transition: transform 0.3s ease, opacity 0.3s ease;
+        }
+        .nav-toggle span + span {
+            margin-top: 4px;
+        }
+        .nav-toggle.is-open span:nth-child(1) {
+            transform: translateY(6px) rotate(45deg);
+        }
+        .nav-toggle.is-open span:nth-child(2) {
+            opacity: 0;
+        }
+        .nav-toggle.is-open span:nth-child(3) {
+            transform: translateY(-6px) rotate(-45deg);
+        }
         .container {
             display: flex;
             flex-wrap: wrap;
@@ -83,6 +164,42 @@
             footer { flex-direction: column; }
             footer p { margin-bottom: 5px; text-align: center; }
         }
+        @media (max-width: 1024px) {
+            .top-nav-inner {
+                padding: 0.9rem 1.5rem;
+            }
+        }
+        @media (max-width: 820px) {
+            .nav-links {
+                position: absolute;
+                inset: calc(100% + 0.5rem) 1rem auto;
+                display: grid;
+                gap: 0.75rem;
+                padding: 1rem;
+                border-radius: 16px;
+                background: rgba(255, 255, 255, 0.96);
+                box-shadow: 0 18px 40px rgba(34, 76, 142, 0.15);
+                transform: translateY(-10px);
+                opacity: 0;
+                pointer-events: none;
+                transition: opacity 0.25s ease, transform 0.25s ease;
+            }
+            .nav-links.is-open {
+                transform: translateY(0);
+                opacity: 1;
+                pointer-events: auto;
+            }
+            .top-nav-inner {
+                position: relative;
+            }
+            .nav-toggle {
+                display: flex;
+            }
+            .nav-links a {
+                width: 100%;
+                justify-content: flex-start;
+            }
+        }
         @media (max-width: 768px) {
             .container { flex-direction: column; }
             .card { margin-bottom: 2rem; }
@@ -90,6 +207,20 @@
     </style>
 </head>
 <body>
+    <header class="top-nav">
+        <div class="top-nav-inner">
+            <div class="brand">Raja Sekhar Medindrao</div>
+            <nav class="nav-links" aria-label="Primary navigation">
+                <a href="#weather" class="nav-pill">Check Weather</a>
+                <a href="#games" class="nav-pill">Play Games</a>
+                <a href="#talk-with-ai" class="nav-pill">Talk with AI</a>
+                <a href="#timer" class="nav-pill">Timer / Stopwatch</a>
+            </nav>
+            <button class="nav-toggle" aria-label="Toggle navigation menu">
+                <span></span><span></span><span></span>
+            </button>
+        </div>
+    </header>
     <main class="container">
         <section class="card">
             <div class="profile">
@@ -122,5 +253,16 @@
         <p>Licensed under Apache 2.0.</p>
         <p>Developed by Codex + ChatGPT.</p>
     </footer>
+    <script>
+        (function() {
+            const toggle = document.querySelector('.nav-toggle');
+            const nav = document.querySelector('.nav-links');
+            if (!toggle || !nav) return;
+            toggle.addEventListener('click', () => {
+                const isOpen = nav.classList.toggle('is-open');
+                toggle.classList.toggle('is-open', isOpen);
+            });
+        })();
+    </script>
 </body>
 </html>
