Increase header logo size to 48px height

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             gap: 0.5rem;
         }
         .brand img {
-            height: 40px; /* approximate size for header logo */
+            height: 48px; /* increased size for better visibility */
             width: auto;
             display: block;
         }
