--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 <body>
     <header class="top-nav">
         <div class="top-nav-inner">
-            <div class="brand"><img src="logo.png" alt="Site logo"></div>
+            <div class="brand"><a href="/" title="Refresh page"><img src="logo.png" alt="Site logo"></a></div>
             <nav class="nav-links" aria-label="Primary navigation">
                 <a href="#weather" class="nav-pill">Check Weather</a>
                 <a href="#games" class="nav-pill">Play Games</a>
