--- a/index.html
+++ b/index.html
@@ -183,14 +183,15 @@
                 inset: calc(100% + 0.5rem) 1rem auto;
                 display: grid;
                 gap: 0.75rem;
-                padding: 1rem;
+                padding: 1.25rem;
                 border-radius: 16px;
-                background: rgba(255, 255, 255, 0.96);
+                background: rgba(255, 255, 255, 0.98);
                 box-shadow: 0 18px 40px rgba(34, 76, 142, 0.15);
                 transform: translateY(-10px);
                 opacity: 0;
                 pointer-events: none;
                 transition: opacity 0.25s ease, transform 0.25s ease;
+                min-width: 280px;
             }
             .nav-links.is-open {
                 transform: translateY(0);
@@ -206,6 +207,14 @@
             .nav-links a {
                 width: 100%;
                 justify-content: flex-start;
+                padding: 0.75rem 1.25rem;
+                border-radius: 12px;
+                font-size: 1rem;
+                background: transparent;
+                box-shadow: none;
+            }
+            .nav-links a:hover {
+                background: rgba(34, 76, 142, 0.08);
             }
         }
         @media (max-width: 768px) {
