Update logo link to point to GitHub Pages URL

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 <body>
     <header class="top-nav">
         <div class="top-nav-inner">
-            <div class="brand"><a href="/" title="Refresh page"><img src="logo.png" alt="Site logo"></a></div>
+            <div class="brand"><a href="https://rajamedindrao.github.io/RajasWebsite/" title="Go to homepage"><img src="logo.png" alt="Site logo"></a></div>
             <nav class="nav-links" aria-label="Primary navigation">
                 <a href="#weather" class="nav-pill">Check Weather</a>
                 <a href="#games" class="nav-pill">Play Games</a>
