--- a/PAGES/CheckWeather/check-weather.html
+++ b/PAGES/CheckWeather/check-weather.html
@@ -4,153 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Check</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: system-ui, -apple-system, "Segoe UI", Arial, sans-serif;
-        }
-
-        body {
-            min-height: 100vh;
-            background: linear-gradient(135deg, #f7f9fc, #e8f1ff);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 1rem;
-        }
-
-        .container {
-            background: rgba(255, 255, 255, 0.95);
-            padding: 2rem;
-            border-radius: 20px;
-            box-shadow: 0 8px 32px rgba(34, 76, 142, 0.1);
-            width: 100%;
-            max-width: 500px;
-        }
-
-        h1 {
-            color: #224c8e;
-            margin-bottom: 1.5rem;
-            text-align: center;
-            font-size: 1.75rem;
-        }
-
-        .search-box {
-            display: flex;
-            gap: 0.5rem;
-            margin-bottom: 2rem;
-        }
-
-        input {
-            flex: 1;
-            padding: 0.75rem 1rem;
-            border: 2px solid #e1e8f5;
-            border-radius: 12px;
-            font-size: 1rem;
-            transition: border-color 0.2s;
-        }
-
-        input:focus {
-            outline: none;
-            border-color: #224c8e;
-        }
-
-        button {
-            padding: 0.75rem 1.5rem;
-            background: #224c8e;
-            color: white;
-            border: none;
-            border-radius: 12px;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: background 0.2s;
-        }
-
-        button:hover {
-            background: #1a3b6d;
-        }
-
-        button:disabled {
-            background: #ccd4e2;
-            cursor: not-allowed;
-        }
-
-        .weather-info {
-            display: none;
-            background: #f7f9fc;
-            padding: 1.5rem;
-            border-radius: 16px;
-            margin-bottom: 1rem;
-        }
-
-        .weather-info.visible {
-            display: block;
-        }
-
-        .city-name {
-            font-size: 1.5rem;
-            color: #224c8e;
-            margin-bottom: 1rem;
-            text-align: center;
-        }
-
-        .weather-details {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-            gap: 1rem;
-            text-align: center;
-        }
-
-        .weather-item {
-            padding: 1rem;
-            background: white;
-            border-radius: 12px;
-            box-shadow: 0 2px 8px rgba(34, 76, 142, 0.05);
-        }
-
-        .weather-item .label {
-            color: #666;
-            font-size: 0.9rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .weather-item .value {
-            color: #224c8e;
-            font-size: 1.25rem;
-            font-weight: 600;
-        }
-
-        .error-message {
-            display: none;
-            color: #dc3545;
-            text-align: center;
-            padding: 1rem;
-            background: #fdf0f1;
-            border-radius: 12px;
-        }
-
-        .error-message.visible {
-            display: block;
-        }
-
-        @media (max-width: 480px) {
-            .container {
-                padding: 1.5rem;
-            }
-
-            .search-box {
-                flex-direction: column;
-            }
-
-            button {
-                width: 100%;
-            }
-        }
-    </style>
+        <link rel="stylesheet" href="../../styles/style.css">
+    <link rel="stylesheet" href="check-weather-page.css">
 </head>
 <body>
+        <!-- Inlined header (previously components/header.html) -->
+        <header class="top-nav">
+            <div class="top-nav-inner">
+                <div class="brand"><a href="https://rajamedindrao.github.io/RajasWebsite/" title="Go to homepage"><img src="../../logo.png" alt="Site logo"></a></div>
+                <nav class="nav-links" aria-label="Primary navigation">
+                    <a href="check-weather.html" class="nav-pill">Check Weather</a>
+                    <a href="../PlayGames/play-games.html" class="nav-pill">Play Games</a>
+                    <a href="../TalkWithAI/talk-with-ai.html" class="nav-pill">Talk with AI</a>
+                    <a href="../TimerStopWatch/timer-stopwatch.html" class="nav-pill">Timer / Stopwatch</a>
+                </nav>
+                <button class="nav-toggle" aria-label="Toggle navigation menu">
+                    <span></span><span></span><span></span>
+                </button>
+            </div>
+        </header>
+        <script>
+            (function() {
+                const toggle = document.querySelector('.nav-toggle');
+                const nav = document.querySelector('.nav-links');
+                if (!toggle || !nav) return;
+                toggle.addEventListener('click', () => {
+                    const isOpen = nav.classList.toggle('is-open');
+                    toggle.classList.toggle('is-open', isOpen);
+                });
+            })();
+        </script>
     <div class="container">
         <h1>Weather Check</h1>
         <div class="search-box">
@@ -175,6 +58,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 
     <script>
@@ -309,5 +193,12 @@
         // Focus input on page load
         cityInput.focus();
     </script>
+        <!-- Inlined footer (previously components/footer.html) -->
+        <footer>
+            <p>&copy; 2025 Raja Sekhar Medindrao. All rights reserved.</p>
+            <p>Licensed under Apache 2.0.</p>
+            <p>Developed by Codex + ChatGPT.</p>
+        </footer>
+
 </body>
 </html>
