Fix: use .page-content wrapper class so weather card centers correctly

--- a/PAGES/CheckWeather/check-weather.html
+++ b/PAGES/CheckWeather/check-weather.html
@@ -63,7 +63,7 @@
                 });
             })();
         </script>
-    <div class="weather-page-content">
+    <div class="page-content">
         <div class="weather-container">
         <h1>Weather Check</h1>
         <div class="search-box">
