CheckWeather: style city-name (spacing, size, weight)

--- a/PAGES/CheckWeather/check-weather.html
+++ b/PAGES/CheckWeather/check-weather.html
@@ -25,6 +25,7 @@
         .suggestions li:hover,.suggestions li.active{background:#f1f6ff}
         .no-results{padding:.6rem .9rem;color:#777}
         .weather-info{display:none;background:#f7f9fc;padding:1.2rem;border-radius:12px;margin-top:1rem}
+    .city-name{display:block;font-size:1.25rem;font-weight:700;color:var(--primary);margin:0.75rem 0 1rem;text-align:center;padding:0 0.5rem}
         .weather-info.visible{display:block}
         .weather-details{display:grid;grid-template-columns:repeat(auto-fit,minmax(120px,1fr));gap:.75rem;text-align:center}
         .weather-item{padding:.75rem;background:#fff;border-radius:10px;box-shadow:0 2px 8px rgba(34,76,142,0.03)}
